Style fixes, making not logged in warning more visible

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -735,10 +735,13 @@ margin-left:  10px;
 .no-created-groups-div{
   min-height: 50px;
   padding: 10px;
-  max-width: 800px;
+
+  border-radius: 5px;
   margin: auto;
   font-size: larger;
   text-align: center;
+  background-color: white;
+  border: 1px solid black;
 }
 
 .new-group{
@@ -760,7 +763,7 @@ margin-left:  10px;
 }
 
 .groups-div > div{
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: white;
 }
 
@@ -811,13 +814,17 @@ margin-left:  10px;
 }
 
 
+.link-custom-color {
+  color: blue;
+}
 
 
 /* Group modal styles */
 .members-div{
   margin-left: 30px;
-  height: 425px;
-  width: 425px;
+  height: 390px;
+  width: 390px;
+  min-width: 100px;
   display: inline-block;
   vertical-align: top;
   overflow: auto;
@@ -991,10 +998,32 @@ background-color: white;
 }
 
 .group-member-div{
-  border: 2px solid black;
+  border: 1px solid black;
   margin: auto;
   background-color: white;
+
   
+}
+
+.group-members-div{
+  border-radius: 5px;
+  border: 2px solid black;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.group-members-div-teacher{
+  border-radius: 5px;
+  border: 2px solid black;
+  max-width: 665px;
+  margin: auto;
+}
+
+.group-members-div-teacher:empty {
+  border-radius: 5px;
+  border: none;
+  max-width: 665px;
+  margin: auto;
 }
 
 .group-member-div div{
